--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
 				height: 400px;
 			}
 
-			.main > img {
+			.image {
 				height: inherit;
 				width: 50%;
+				background-image: url("images/image-product-desktop.jpg");
+				background-size: cover;
+				background-repeat: no-repeat;
 			}
 
 			.description {
@@ -146,10 +149,13 @@
 			@media screen and (max-width: 375px) {
 				.main {
 					flex-direction: column;
-					width: 270px;
+					width: 289px;
 					height: 600px;
 				}
-				.main > img {
+				.image {
+					background-image: url("images/image-product-mobile.jpg");
+					background-size: cover;
+					background-repeat: no-repeat;
 					width: 100%;
 					height: 40%;
 				}
@@ -168,11 +174,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<img
-				src="images\image-product-desktop.jpg"
-				alt="perfume image"
-			/>
-
+			<div class="image"></div>
 			<div class="description">
 				<p class="perfume">PERFUME</p>
 				<h2 class="brand">Gabrielle Essence Eau De Parfum</h2>
