--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			.image {
 				height: inherit;
 				width: 50%;
-				background-image: url("images/image-product-desktop.jpg");
+				background-image: url("image-product-desktop.jpg");
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
@@ -153,7 +153,7 @@
 					height: 600px;
 				}
 				.image {
-					background-image: url("images/image-product-mobile.jpg");
+					background-image: url("image-product-mobile.jpg");
 					background-size: cover;
 					background-repeat: no-repeat;
 					width: 100%;
